fixed contrast errors with link colors

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 
 .bg-custom {
@@ -63,6 +63,10 @@ footer {
   margin-bottom: 0;
   position: -webkit-sticky; /* Safari */
   position: sticky;
+}
+
+footer a {
+    color: #fff;
 }
 
 .social-media-icons {
